--- a/main.html
+++ b/main.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+<!-- the entire body must be written by student -->
+<div class="container-fluid">
+<div class="row">
+<div class="coloumn1"><img src="https://picsum.photos/seed/picsum/200/300"></div>
+<div class="coloumn1"><img src="https://picsum.photos/seed/picsum/200/300"></div>
+<div class="coloumn1"><img src="https://picsum.photos/seed/picsum/200/300"></div>
+<div class="coloumn1"><img src="https://picsum.photos/seed/picsum/200/300"></div>
+<div class="coloumn1"><img src="https://picsum.photos/seed/picsum/200/300"></div>
+<div class="coloumn1"><img src="https://picsum.photos/seed/picsum/200/300"></div>
+<div class="coloumn1"><img src="https://picsum.photos/seed/picsum/200/300"></div>
+<div class="coloumn1"><img src="https://picsum.photos/seed/picsum/200/300"></div>
+<div class="coloumn1"><img src="https://picsum.photos/seed/picsum/200/300"></div>
+<div class="coloumn1"><img src="https://picsum.photos/seed/picsum/200/300"></div>
+<div class="coloumn1"><img src="https://picsum.photos/seed/picsum/200/300"></div>
+<div class="coloumn1"><img src="https://picsum.photos/seed/picsum/200/300"></div>
+</div>
+<div class="row">
+<div class="coloumn2"><img src="https://picsum.photos/200/300/?blur=1"></div>
+<div class="coloumn2"><img src="https://picsum.photos/200/300/?blur=1"></div>
+<div class="coloumn2"><img src="https://picsum.photos/200/300/?blur=1"></div>
+<div class="coloumn2"><img src="https://picsum.photos/200/300/?blur=1"></div>
+<div class="coloumn2"><img src="https://picsum.photos/200/300/?blur=1"></div>
+<div class="coloumn2"><img src="https://picsum.photos/200/300/?blur=1"></div>
+</div>
+<div class="row">
+<div class="coloumn3"><img src="https://picsum.photos/200/300/?blur=2"></div>
+<div class="coloumn3"><img src="https://picsum.photos/200/300/?blur=2"></div>
+<div class="coloumn3"><img src="https://picsum.photos/200/300/?blur=2"></div>
+</div>
+<div class="row">
+<div class="coloumn4"><img src="https://picsum.photos/200/300/?blur=3"></div>
+</div>
+</div>
+<script type="text/javascript" src="./script.js">
 </script>
-
 </body>
-
 </html>
